# Fractal-RMO

3--(PoC)_(Full)_(System)/: .gitignore  extract_last_25_thoughts.py  last_25_thoughts.md  pyproject.toml
3--(PoC)_(Full)_(System)/0--(README_Folder)/: (README_Folder).md  UNIVERSAL_DOCUMENTATION_UPDATE_PROMPT.md
3--(PoC)_(Full)_(System)/10--(Docker)_(Database)_(Setup)/: docker-compose.yml  init.sql
3--(PoC)_(Full)_(System)/10--(Docker)_(Database)_(Setup)/0--(README_Folder)/: (README_Folder).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0--(README_Folder)/: (README_Folder).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.1--(Contribution)_(Guidelines)_(MUST_READ)/: (Contribution)_(Guidelines)_(MUST_READ).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.2--(Project)_(Overview)_(Current)_(State)/: (Project)_(Overview)_(Current)_(State).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.3--(LLM)_(Limitations)_(Discovered)/: (LLM)_(Limitations)_(Discovered).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.4--(Documentation)_(Validator)_(Script)_(BS)/: session_end_validator.py
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.5--(Documentation)_(Update)_(Prompt)/: (Documentation)_(Update)_(Prompt).md
3--(PoC)_(Full)_(System)/12--(Progress)_(Tracking)_(What)_(We)_(Did)/0.6--(Trunk)_(Branch)_(Documentation)/: (Corrections)_(Needed)_(Complete)_(List).md  (Documentation)_(Fixes)_(Applied).md  (+7 more)
(+21 files in other folders)
