[tool.poetry]
name = "fractal-rmo"
version = "0.1.0"
description = "Recursive Multi-Objective Learning System - Proof of Concept"
authors = ["Chris Hamlin"]

[tool.poetry.dependencies]
python = "^3.11"
# Web framework for API
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

# Database connections
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"  # Updated for Python 3.13 compatibility
redis = "^5.0.0"

# AI model APIs
openai = "^1.3.0"
anthropic = "^0.7.0"

# Utilities
pydantic = "^2.4.0"
click = "^8.1.0"
python-dotenv = "^1.0.0"

# Machine learning
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
